D2-3 Scanner Wrapper Fully implemented with tests (#6)
* feat(ScannerTest): Created tests for ScannerSingleton

Retroactively made tests for scanner since it slipped my mind that it also needs tests to ensure functionality.

- refactored structure for more clarity.
- added tests to scanner

* feat(ScannerTest): Added teardown method

Added a teardown method that closes the scanner after each test to avoid potential issues.

* refactor(MainTest): Created maintest file and updated diary

nothing major in this commit. Mostly a stopgap between thoughts and larger code changes.

* feat(MenuHandlerTest): MenuHandlerTest added (90% done) + Mockito dependency added.

- Mockito added as a dependency to mock up inputs and other dependant classes.
- Added MenuHandlerTest with a skeleton that potentially works
- Todo inside of MenuHandlerTest that might be cause an issue if not resolved.
- Refactors to missed methods still named "Record"

* feat(MenuHandlerTest): Commit before full refactor of Scanner/MenuHandler

MenuHandler is still bricked and fully broken, but the general skeleton is there.
This commit is mostly to create a bookmark over how it looked before I start making drastic changes

- Read diary day 3 for more details -

* feat(ScannerWrapperTest): ScannerWrapperTests written and prepared for development.

- Commented the entire menu handler due to it being dependant on scanner.
- Most tests for scanner are made, a few exceptions might be added down the line such as "prompt enter key"

* feat(ScannerWrapper): Code Passed Tests and are fully functional

- Adjusted tests slightly due to user errors and flaws in logic.
- Added multitudes of input methods in ScannerWrapper.
- Updated diary.

- Have not added tests for *all* methods due to time constraints, will revisit if needed

* fix(ScannerWrapperTest): Closed scanners at teardown and fixed bug with jacoco

Jacoco did not recognise the tests made in ScannerWrapperTest and di